* Attempt to simplify coverage algo

--- a/quintessence/AlphaMesh/AlphaMesh.q.yml
+++ b/quintessence/AlphaMesh/AlphaMesh.q.yml
@@ -1,6 +1,37 @@
 methods:
 
 
+  - name: area_contains_no_pixels
+    type: bool
+    static: true
+    parameters:
+      - name: bitmap
+        type: ALLEGRO_BITMAP*
+        default_argument: nullptr
+      - name: x
+        type: int
+        default_argument: 0
+      - name: y
+        type: int
+        default_argument: 0
+      - name: w
+        type: int
+        default_argument: 0
+      - name: h
+        type: int
+        default_argument: 0
+    body: |
+      const float ALPHA_THRESHOLD = 0.0001f;
+      for (int yy=y; yy<y+h; yy++)
+      {
+         for (int xx=x; xx<x+w; xx++)
+         {
+            if (al_get_pixel(bitmap, x, y).a >= ALPHA_THRESHOLD) return false;
+         }
+      }
+      return true;
+
+
   - name: process
     type: AllegroFlare::TileMaps::TileMap<bool>
     static: true
@@ -26,25 +57,37 @@ methods:
       int cell_width_in_pixels = bitmap_width / num_columns;
       int cell_height_in_pixels = bitmap_height / num_rows;
 
+      // TODO: Ensure there are no "remainder" pixels
+
       // HERE: process the image
       al_lock_bitmap(bitmap, ALLEGRO_PIXEL_FORMAT_ANY, ALLEGRO_LOCK_READONLY);
-      const float ALPHA_THRESHOLD = 0.0001f;
+      //const float ALPHA_THRESHOLD = 0.0001f;
 
       for (int tile_y=0; tile_y<num_rows; tile_y++)
       {
          for (int tile_x=0; tile_x<num_columns; tile_x++)
          {
-            for (int pixel_y=0; pixel_y<cell_height_in_pixels; pixel_y++)
-            {
-               for (int pixel_x=0; pixel_x<cell_width_in_pixels; pixel_x++)
-               {
-                  int x_pos = tile_x * cell_width_in_pixels;
-                  int y_pos = tile_y * cell_height_in_pixels;
-                  ALLEGRO_COLOR p = al_get_pixel(bitmap, x_pos + pixel_x, y_pos + pixel_y);
-                  if (p.a <= ALPHA_THRESHOLD) result.set_tile(tile_x, tile_y, false);
-                  else result.set_tile(tile_x, tile_y, true); // Is this necessary?
-               }
-            }
+            int x_pos = tile_x * cell_width_in_pixels;
+            int y_pos = tile_y * cell_height_in_pixels;
+
+            bool is_empty = area_contains_no_pixels(bitmap, x_pos, y_pos, cell_width_in_pixels, cell_height_in_pixels);
+            //for (int pixel_y=0; pixel_y<cell_height_in_pixels; pixel_y++)
+            //{
+               //bool empty = true;
+               //for (int pixel_x=0; pixel_x<cell_width_in_pixels; pixel_x++)
+               //{
+                  //int x_pos = tile_x * cell_width_in_pixels;
+                  //int y_pos = tile_y * cell_height_in_pixels;
+                  //ALLEGRO_COLOR p = al_get_pixel(bitmap, x_pos + pixel_x, y_pos + pixel_y);
+                  //if (p.a >= ALPHA_THRESHOLD)
+                  //{
+                     //empty = false;
+                     //break;
+                  //}
+               //}
+
+            result.set_tile(tile_x, tile_y, !is_empty);
+            //}
          }
       }
 
