--- a/quintessence/AlphaMesh/AlphaMesh.q.yml
+++ b/quintessence/AlphaMesh/AlphaMesh.q.yml
@@ -1,3 +1,30 @@
+properties:
+
+
+  - name: bitmap
+    type: ALLEGRO_BITMAP*
+    init_with: nullptr
+    constructor_arg: true
+
+  - name: num_rows
+    type: int
+    init_with: 16
+    constructor_arg: true
+
+  - name: num_columns
+    type: int
+    init_with: 16
+    constructor_arg: true
+
+  - name: cell_width_in_pixels
+    type: float
+    init_with: 0.0f
+
+  - name: cell_height_in_pixels
+    type: float
+    init_with: 0.0f
+
+
 methods:
 
 
@@ -32,19 +59,8 @@ methods:
       return true;
 
 
-  - name: process
+  - name: build_tile_mask
     type: AllegroFlare::TileMaps::TileMap<bool>
-    static: true
-    parameters:
-      - name: bitmap
-        type: ALLEGRO_BITMAP*
-        default_argument: nullptr
-      - name: num_rows
-        type: int
-        default_argument: 16
-      - name: num_columns
-        type: int
-        default_argument: 16
     guards: [ bitmap, (num_rows >= 2), (num_columns >= 2) ]
     body: |
       AllegroFlare::TileMaps::TileMap<bool> result;
@@ -53,11 +69,8 @@ methods:
 
       int bitmap_width = al_get_bitmap_width(bitmap);
       int bitmap_height = al_get_bitmap_height(bitmap);
-      float cell_width_in_pixels = (float)bitmap_width / num_columns;
-      float cell_height_in_pixels = (float)bitmap_height / num_rows;
-
-      //int cell_width_in_pixels = bitmap_width / num_columns;
-      //int cell_height_in_pixels = bitmap_height / num_rows;
+      cell_width_in_pixels = (float)bitmap_width / num_columns;
+      cell_height_in_pixels = (float)bitmap_height / num_rows;
 
       // TODO: Ensure there are no "remainder" pixels
 
@@ -73,10 +86,10 @@ methods:
 
             bool is_empty = area_contains_no_pixels(
                bitmap,
-               (int)x_pos,
+               (int)x_pos, // TODO: Convert to float argument
                (int)y_pos,
-               cell_width_in_pixels+1,
-               cell_height_in_pixels+1
+               (int)cell_width_in_pixels+1, // TODO: See if/when +1 is necessary
+               (int)cell_height_in_pixels+1 // TODO: See if/when +1 is necessary
             );
 
             result.set_tile(tile_x, tile_y, !is_empty);
