--- a/quintessence/AlphaMesh/AlphaMesh.q.yml
+++ b/quintessence/AlphaMesh/AlphaMesh.q.yml
@@ -16,13 +16,25 @@ properties:
     init_with: 16
     constructor_arg: true
 
-  - name: cell_width_in_pixels
-    type: float
-    init_with: 0.0f
+  - name: width
+    type: int
+    init_with: 0
+    getter: true
 
-  - name: cell_height_in_pixels
+  - name: height
+    type: int
+    init_with: 0
+    getter: true
+
+  - name: cell_width
     type: float
     init_with: 0.0f
+    getter: true
+
+  - name: cell_height
+    type: float
+    init_with: 0.0f
+    getter: true
 
 
 methods:
@@ -67,10 +79,10 @@ methods:
       result.resize(num_columns, num_rows);
       result.initialize();
 
-      int bitmap_width = al_get_bitmap_width(bitmap);
-      int bitmap_height = al_get_bitmap_height(bitmap);
-      cell_width_in_pixels = (float)bitmap_width / num_columns;
-      cell_height_in_pixels = (float)bitmap_height / num_rows;
+      int width = al_get_bitmap_width(bitmap);
+      int height = al_get_bitmap_height(bitmap);
+      cell_width = (float)width / num_columns;
+      cell_height = (float)height / num_rows;
 
       // TODO: Ensure there are no "remainder" pixels
 
@@ -81,15 +93,15 @@ methods:
       {
          for (int tile_x=0; tile_x<num_columns; tile_x++)
          {
-            float x_pos = tile_x * cell_width_in_pixels;
-            float y_pos = tile_y * cell_height_in_pixels;
+            float x_pos = tile_x * cell_width;
+            float y_pos = tile_y * cell_height;
 
             bool is_empty = area_contains_no_pixels(
                bitmap,
                (int)x_pos, // TODO: Convert to float argument
                (int)y_pos,
-               (int)cell_width_in_pixels+1, // TODO: See if/when +1 is necessary
-               (int)cell_height_in_pixels+1 // TODO: See if/when +1 is necessary
+               (int)cell_width+1, // TODO: See if/when +1 is necessary
+               (int)cell_height+1 // TODO: See if/when +1 is necessary
             );
 
             result.set_tile(tile_x, tile_y, !is_empty);
