* Assemble mesh with #build_mesh#

--- a/quintessence/AlphaMesh/AlphaMesh.q.yml
+++ b/quintessence/AlphaMesh/AlphaMesh.q.yml
@@ -71,6 +71,88 @@ methods:
       return true;
 
 
+  - name: assemble_quad
+    type: std::vector<ALLEGRO_VERTEX>
+    static: true
+    parameters:
+      - name: x
+        type: float
+        default_argument: 0
+      - name: y
+        type: float
+        default_argument: 0
+      - name: x2
+        type: float
+        default_argument: 0
+      - name: y2
+        type: float
+        default_argument: 0
+    body: |
+      std::vector<ALLEGRO_VERTEX> result;
+
+      // Create the color once
+      ALLEGRO_COLOR color = al_map_rgb(255, 255, 255);
+
+      // Bottom-left
+      result.push_back(ALLEGRO_VERTEX{x, y2, 0.0f, 0.0f, 1.0f, color});
+
+      // Top-left
+      result.push_back(ALLEGRO_VERTEX{x, y, 0.0f, 0.0f, 0.0f, color});
+
+      // Bottom-right
+      result.push_back(ALLEGRO_VERTEX{x2, y2, 0.0f, 1.0f, 1.0f, color});
+
+      // Top-left (again, for the second triangle)
+      result.push_back(ALLEGRO_VERTEX{x, y, 0.0f, 0.0f, 0.0f, color});
+
+      // Bottom-right (again, for the second triangle)
+      result.push_back(ALLEGRO_VERTEX{x2, y2, 0.0f, 1.0f, 1.0f, color});
+
+      // Top-right
+      result.push_back(ALLEGRO_VERTEX{x2, y, 0.0f, 1.0f, 0.0f, color});
+
+      return result;
+
+
+  - name: build_mesh
+    type: std::vector<ALLEGRO_VERTEX>
+    body: |
+      AllegroFlare::TileMaps::TileMap<bool> tile_mask = build_tile_mask();
+
+      std::vector<ALLEGRO_VERTEX> result;
+
+      for (int row=0; row<tile_mask.get_num_rows(); row++)
+      {
+         for (int column=0; column<tile_mask.get_num_columns(); column++)
+         {
+            bool is_solid = tile_mask.get_tile(column, row);
+            if (is_solid)
+            {
+               float x1 = column * cell_width;
+               float y1 = row * cell_height;
+               float x2 = (column+1) * cell_width;
+               float y2 = (row+1) * cell_height;
+
+               std::vector<ALLEGRO_VERTEX> quad = assemble_quad(x1, y1, x2, y2);
+               //quad = 
+               result.insert(result.end(), quad.begin(), quad.end());
+            }
+
+            //bool is_empty = area_contains_no_pixels(
+               //bitmap,
+               //(int)x_pos, // TODO: Convert to float argument
+               //(int)y_pos,
+               //(int)cell_width+1, // TODO: See if/when +1 is necessary
+               //(int)cell_height+1 // TODO: See if/when +1 is necessary
+            //);
+
+            //result.set_tile(tile_x, tile_y, !is_empty);
+         }
+      }
+      
+      return result;
+
+
   - name: build_tile_mask
     type: AllegroFlare::TileMaps::TileMap<bool>
     guards: [ bitmap, (num_rows >= 2), (num_columns >= 2) ]
@@ -84,11 +166,8 @@ methods:
       cell_width = (float)width / num_columns;
       cell_height = (float)height / num_rows;
 
-      // TODO: Ensure there are no "remainder" pixels
-
       al_lock_bitmap(bitmap, ALLEGRO_PIXEL_FORMAT_ANY, ALLEGRO_LOCK_READONLY);
 
-      bool last_row = false;
       for (int tile_y=0; tile_y<num_rows; tile_y++)
       {
          for (int tile_x=0; tile_x<num_columns; tile_x++)
@@ -120,5 +199,7 @@ dependencies:
     headers: [ AllegroFlare/TileMaps/TileMap.hpp ]
   - symbol: ALLEGRO_BITMAP
     headers: [ allegro5/allegro.h ]
+  - symbol: ALLEGRO_VERTEX
+    headers: [ allegro5/allegro_primitives.h ]
 
 
