* Draw bitmap using assembled mesh

--- a/quintessence/AlphaMesh/AlphaMesh.q.yml
+++ b/quintessence/AlphaMesh/AlphaMesh.q.yml
@@ -94,22 +94,22 @@ methods:
       ALLEGRO_COLOR color = al_map_rgb(255, 255, 255);
 
       // Bottom-left
-      result.push_back(ALLEGRO_VERTEX{x, y2, 0.0f, 0.0f, 1.0f, color});
+      result.push_back(ALLEGRO_VERTEX{x, y2, 0.0f, x, y2, color});
 
       // Top-left
-      result.push_back(ALLEGRO_VERTEX{x, y, 0.0f, 0.0f, 0.0f, color});
+      result.push_back(ALLEGRO_VERTEX{x, y, 0.0f, x, y, color});
 
       // Bottom-right
-      result.push_back(ALLEGRO_VERTEX{x2, y2, 0.0f, 1.0f, 1.0f, color});
+      result.push_back(ALLEGRO_VERTEX{x2, y2, 0.0f, x2, y2, color});
 
       // Top-left (again, for the second triangle)
-      result.push_back(ALLEGRO_VERTEX{x, y, 0.0f, 0.0f, 0.0f, color});
+      result.push_back(ALLEGRO_VERTEX{x, y, 0.0f, x, y, color});
 
       // Bottom-right (again, for the second triangle)
-      result.push_back(ALLEGRO_VERTEX{x2, y2, 0.0f, 1.0f, 1.0f, color});
+      result.push_back(ALLEGRO_VERTEX{x2, y2, 0.0f, x2, y2, color});
 
       // Top-right
-      result.push_back(ALLEGRO_VERTEX{x2, y, 0.0f, 1.0f, 0.0f, color});
+      result.push_back(ALLEGRO_VERTEX{x2, y, 0.0f, x2, y, color});
 
       return result;
 
