--- a/quintessence/AlphaMesh/AlphaMesh.q.yml
+++ b/quintessence/AlphaMesh/AlphaMesh.q.yml
@@ -101,8 +101,17 @@ methods:
         default_argument: nullptr
     guards: [ tile_mask ]
     body: |
-      // TODO: This algorithm
-      return false;
+      bool on_or_past_the_last_row = (rect_row2 >= tile_mask->get_num_rows() - 1);
+      if (on_or_past_the_last_row) return false;
+
+      int next_row = rect_row2+1;
+      for (int column=rect_column1; column<=rect_column2; column++)
+      {
+         bool tile_is_solid = tile_mask->get_tile(column, next_row);
+         if (!tile_is_solid) return false;
+      }
+
+      return true;
 
 
   - name: assemble_quad
@@ -324,6 +333,10 @@ methods:
 
       for (int row=0; row<tile_mask.get_num_rows(); row++)
       {
+         //float rect_column1 = 0;
+         //float rect_row1 = 0;
+         //float rect_column2 = 0;
+         //float rect_row2 = 0;
          state_assembling_rectangle = false;
 
          for (int column=0; column<tile_mask.get_num_columns(); column++)
@@ -371,25 +384,48 @@ methods:
 
             if (close_rectangle_horizontally)
             {
-               bool should_collapse_down = all_cells_directly_below_are_solid(
-                  rect_row1,
-                  rect_column1,
-                  rect_row2,
-                  rect_column2,
-                  &tile_mask
-               );
+               /*
+               bool should_collapse_down = false; //all_cells_directly_below_are_solid(
+               do
+               {
+                  bool should_collapse_down = all_cells_directly_below_are_solid(
+                     rect_row1,
+                     rect_column1,
+                     rect_row2,
+                     rect_column2,
+                     &tile_mask
+                  );
 
-               if (should_collapse_down)
-               {
-                  // Set all the cells below as not filled
-                  // Extend the rect_x2, rect_y2 by the height
-               }
-               else
-               {
-                  std::vector<ALLEGRO_VERTEX> quad = assemble_quad(rect_x1, rect_y1, rect_x2, rect_y2);
-                  result.insert(result.end(), quad.begin(), quad.end());
-                  state_assembling_rectangle = false;
-               }
+                  if (should_collapse_down)
+                  {
+                     //// Set all the cells below as not filled
+                     int next_row = rect_row2+1;
+                     for (int column=rect_column1; column<=rect_column2; column++)
+                     {
+                        tile_mask.set_tile(column, next_row, false);
+                     }
+
+                     rect_row2++;
+                     // Extend the rect_x2, rect_y2 by the height
+                     //float x2 = (column+1) * cell_width;
+                     float y2 = (rect_row2+1) * cell_height;
+                     //rect_x2 = x2;
+                     rect_y2 = y2;
+                     //rect_column2 = column;
+                     //rect_row2 = row;
+                  }
+                  else
+                  {
+                     std::vector<ALLEGRO_VERTEX> quad = assemble_quad(rect_x1, rect_y1, rect_x2, rect_y2);
+                     result.insert(result.end(), quad.begin(), quad.end());
+                     state_assembling_rectangle = false;
+                  }
+               } while(should_collapse_down);
+               */
+
+               std::vector<ALLEGRO_VERTEX> quad = assemble_quad(rect_x1, rect_y1, rect_x2, rect_y2);
+               result.insert(result.end(), quad.begin(), quad.end());
+               state_assembling_rectangle = false;
             }
          }
       }
