--- a/quintessence/AlphaMesh/AlphaMesh.q.yml
+++ b/quintessence/AlphaMesh/AlphaMesh.q.yml
@@ -384,11 +384,11 @@ methods:
 
             if (close_rectangle_horizontally)
             {
-               /*
+               ///*
                bool should_collapse_down = false; //all_cells_directly_below_are_solid(
-               do
-               {
-                  bool should_collapse_down = all_cells_directly_below_are_solid(
+               //do
+               //{
+                  should_collapse_down = all_cells_directly_below_are_solid(
                      rect_row1,
                      rect_column1,
                      rect_row2,
@@ -413,6 +413,9 @@ methods:
                      rect_y2 = y2;
                      //rect_column2 = column;
                      //rect_row2 = row;
+                     std::vector<ALLEGRO_VERTEX> quad = assemble_quad(rect_x1, rect_y1, rect_x2, rect_y2);
+                     result.insert(result.end(), quad.begin(), quad.end());
+                     state_assembling_rectangle = false;
                   }
                   else
                   {
@@ -420,12 +423,12 @@ methods:
                      result.insert(result.end(), quad.begin(), quad.end());
                      state_assembling_rectangle = false;
                   }
-               } while(should_collapse_down);
-               */
+               //} while(should_collapse_down);
+               //*/
 
-               std::vector<ALLEGRO_VERTEX> quad = assemble_quad(rect_x1, rect_y1, rect_x2, rect_y2);
-               result.insert(result.end(), quad.begin(), quad.end());
-               state_assembling_rectangle = false;
+               //std::vector<ALLEGRO_VERTEX> quad = assemble_quad(rect_x1, rect_y1, rect_x2, rect_y2);
+               //result.insert(result.end(), quad.begin(), quad.end());
+               //state_assembling_rectangle = false;
             }
          }
       }
