--- a/quintessence/AlphaMesh/AlphaMesh.q.yml
+++ b/quintessence/AlphaMesh/AlphaMesh.q.yml
@@ -432,6 +432,125 @@ methods:
       return result;
 
 
+  - name: build_mesh__collapse_rows_columns
+    type: std::vector<ALLEGRO_VERTEX>
+    body: |
+      AllegroFlare::TileMaps::TileMap<bool> tile_mask = build_tile_mask();
+
+      std::vector<ALLEGRO_VERTEX> result;
+
+      float rect_column1 = 0;
+      float rect_row1 = 0;
+      float rect_column2 = 0;
+      float rect_row2 = 0;
+
+      float rect_x1 = 0;
+      float rect_y1 = 0;
+      float rect_x2 = 0;
+      float rect_y2 = 0;
+      bool state_assembling_rectangle = false;
+
+      for (int row=0; row<tile_mask.get_num_rows(); row++)
+      {
+         bool state_assembling_rectangle = false;
+
+         for (int column=0; column<tile_mask.get_num_columns(); column++)
+         {
+            bool at_last_column = (column == tile_mask.get_num_columns() - 1);
+            bool is_solid = tile_mask.get_tile(column, row);
+            bool close_rectangle_horizontally = false;
+
+            if (is_solid)
+            {
+               if (!state_assembling_rectangle)
+               {
+                  float x1 = column * cell_width;
+                  float y1 = row * cell_height;
+                  rect_x1 = x1;
+                  rect_y1 = y1;
+                  rect_column1 = column;
+                  rect_row1 = row;
+
+                  float x2 = (column+1) * cell_width;
+                  float y2 = (row+1) * cell_height;
+                  rect_x2 = x2;
+                  rect_y2 = y2;
+                  rect_column2 = column;
+                  rect_row2 = row;
+
+                  state_assembling_rectangle = true;
+               }
+               else
+               {
+                  float x2 = (column+1) * cell_width;
+                  float y2 = (row+1) * cell_height;
+                  rect_x2 = x2;
+                  rect_y2 = y2;
+                  rect_column2 = column;
+                  rect_row2 = row;
+               }
+            }
+            else
+            {
+               if (state_assembling_rectangle)
+               {
+                  close_rectangle_horizontally = true;
+               }
+               else
+               {
+                  // Nothing to do, consecutive empty tiles
+               }
+            }
+
+            if (at_last_column) close_rectangle_horizontally = true;
+
+            if (close_rectangle_horizontally)
+            {
+               // Attempt to build a larger quad by moving down
+               bool should_collapse_down = false;
+
+               do
+               {
+                  should_collapse_down = all_cells_directly_below_are_solid(
+                     rect_row1,
+                     rect_column1,
+                     rect_row2,
+                     rect_column2,
+                     &tile_mask
+                  );
+
+                  if (should_collapse_down)
+                  {
+                     // Set all the cells below as not filled
+                     int next_row = rect_row2+1;
+                     for (int column=rect_column1; column<=rect_column2; column++)
+                     {
+                        tile_mask.set_tile(column, next_row, false);
+                     }
+
+                     rect_row2++;
+                     // Extend the rect_x2, rect_y2 by the height
+                     float y2 = (rect_row2+1) * cell_height;
+                     rect_y2 = y2;
+                  }
+                  else
+                  {
+                     // Do nothing, will break out of loop
+                  }
+               } while(should_collapse_down);
+
+               std::vector<ALLEGRO_VERTEX> quad = assemble_quad(rect_x1, rect_y1, rect_x2, rect_y2);
+               result.insert(result.end(), quad.begin(), quad.end());
+               state_assembling_rectangle = false;
+
+               state_assembling_rectangle = false;
+            }
+         }
+      }
+      
+      return result;
+
+
   - name: build_tile_mask
     type: AllegroFlare::TileMaps::TileMap<bool>
     guards: [ bitmap, (num_rows >= 2), (num_columns >= 2) ]
